# ac_cursive

./: Cargo.toml  README.md
src/: KB.txt  Todo  main.rs
src/ToDo/: Todo  Todo copy
src/custom_views/: horizontal_line.rs
src/definitions/: definitions.rs
src/tui_fn/: cp_utils.rs  create_classic_buttons.rs  create_classic_layout.rs  create_cp_dlg.rs  create_info_layout.rs  create_info_panel.rs  create_info_table.rs  create_menu.rs  create_panel.rs  create_peek_layout.rs  create_table.rs  create_view_buttons.rs  create_view_layout.rs  create_view_panel.rs  create_view_table.rs  mod.rs
src/utils/: common_utils.rs  mod.rs
src/utils/cp_machinery/: copy.rs  copy_new.rs  cp_client_main.rs  cp_server_main.rs  cp_types.rs  cp_utils.rs  create_cp_dlg.rs  create_cp_errors_dlg.rs  create_path_exists_dlg.rs  info.txt  mod.rs  no_paths_selected_dlg.rs
src/utils/cp_machinery/old/: cp_client_main.rs  cp_server_main.rs
src/utils/cp_machinery/old_slash_unused/: cp_server_main.rs  signal_handlers.rs  unused.rs
src/utils/find_machinery/: create_find_dlg.rs  f9_handler.rs  mod.rs
