[package]
name = "ac_cursive"
version = "0.1.0"
edition = "2021"
repository = "https://github.com/smallB007/ac_cursive.git"
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
walkdir = "2"
#cursive = "*"
#cursive_table_view = "*"
cursive = { git = "https://github.com/smallB007/cursive.git" }
#cursive_table_view = { git = "https://github.com/smallB007/cursive_table_view.git" }
cursive_table_view = { path = "/home/artie/Documents/Projects/rust/cursive_table_view" }

rand = "*"
[patch.crates-io]
cursive_core = { git = "https://github.com/smallB007/cursive.git" }
