[package]
name = "ac_cursive"
version = "0.1.0"
edition = "2021"
repository = "https://github.com/smallB007/ac_cursive.git"
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
#numeric = "*"
notify = { version = "5.0.0" }
notify-debouncer-mini = { version = "0.2.0" }
futures = "0.3"

time = { version = "0.3", features = ["macros"] }
walkdir = "2"
#cursive = "*"
#cursive_table_view = "*"
#cursive = { git = "https://github.com/smallB007/cursive.git" }
cursive = { path = "/home/artie/Documents/Projects/rust/ac_cursive/src/cursive_forks/cursive/cursive" }

#cursive_table_view = { git = "https://github.com/smallB007/cursive_table_view.git" }
cursive_table_view = { path = "/home/artie/Documents/Projects/rust/ac_cursive/src/cursive_forks/cursive_table_view" }

rand = "*"
[patch.crates-io]
#cursive_core = { git = "https://github.com/smallB007/cursive.git" }
cursive_core = { path = "/home/artie/Documents/Projects/rust/ac_cursive/src/cursive_forks/cursive/cursive-core" }
